--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(apsimx_example)
 export(auto_detect_apsimx_examples)
 export(edit_apsimx)
 export(inspect_apsimx)
+export(is_apsimx_xml)
 export(read_apsimx)
 export(read_apsimx_all)
 import(DBI)
