Reorganizing functions and 'making room' to provide support for JSON files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 export(apsimx)
 export(apsimx_example)
+export(apsimx_filetype)
 export(auto_detect_apsimx_examples)
-export(edit_apsimx)
+export(edit_apsimx_xml)
 export(inspect_apsimx)
-export(is_apsimx_xml)
+export(inspect_apsimx_json)
+export(inspect_apsimx_xml)
 export(read_apsimx)
 export(read_apsimx_all)
 import(DBI)
 import(RSQLite)
+import(jsonlite)
 import(knitr)
 import(xml2)
