--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(apsimx)
 export(apsimx_example)
 export(apsimx_filetype)
 export(auto_detect_apsimx_examples)
+export(edit_apsimx)
 export(edit_apsimx_xml)
 export(inspect_apsimx)
 export(inspect_apsimx_json)
