Starting to provide support for editing JSON files. Code to write JSON seems to work.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(apsimx_example)
 export(apsimx_filetype)
 export(auto_detect_apsimx_examples)
 export(edit_apsimx)
+export(edit_apsimx_json)
 export(edit_apsimx_xml)
 export(inspect_apsimx)
 export(inspect_apsimx_json)
