Preliminary version of 'inspect_apsimx_replacement' function (needs more work).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(edit_apsimx_json)
 export(edit_apsimx_xml)
 export(inspect_apsimx)
 export(inspect_apsimx_json)
+export(inspect_apsimx_replacement)
 export(inspect_apsimx_xml)
 export(read_apsimx)
 export(read_apsimx_all)
