--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(apsimx_options)
 export(auto_detect_apsimx_examples)
 export(edit_apsimx)
 export(edit_apsimx_json)
+export(edit_apsimx_replacement)
 export(edit_apsimx_xml)
 export(inspect_apsimx)
 export(inspect_apsimx_json)
