Improvements to inspect* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(edit_apsimx)
 export(edit_apsimx_json)
 export(edit_apsimx_replacement)
 export(edit_apsimx_xml)
+export(inspect_apsim)
 export(inspect_apsimx)
 export(inspect_apsimx_json)
 export(inspect_apsimx_replacement)
