--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(apsimx_filetype)
 export(apsimx_options)
 export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
+export(edit_apsim)
 export(edit_apsimx)
 export(edit_apsimx_json)
 export(edit_apsimx_replacement)
