Cleaning up code, overall improvements and refining tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
 export(edit_apsim)
 export(edit_apsimx)
+export(edit_apsimx_batch)
 export(edit_apsimx_json)
 export(edit_apsimx_replacement)
 export(edit_apsimx_xml)
