--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: apsimx
-Title: Inspect, Read, Edit and Run APSIM-X (and APSIM "Classic")
-Version: 1.31
+Title: Inspect, Read, Edit and Run APSIM-X "Next Generation" and APSIM "Classic"
+Version: 1.33
 Authors@R: person("Fernando", "Miguez", email = "femiguezt@iastate.edu", role = c("aut", "cre"))
-Description: The functions in this package manipulate .apsimx (XML or JSON) files and run them from within
-   R through the command line. For more information about APSIM see (www.apsim.info) and for APSIM
-   next generation (https://apsimnextgeneration.netlify.com/). The main difference with R packages APSIM
-   and apsimr is that these functions are designed to worth with APSIM Next Generation (APSIM-X).
-   Added initial support for APSIM "Classic" (7.x) since version 0.95.
+Description: The functions in this package inspect, read, edit and run .apsimx (JSON) and .apsim (XML)
+             files and run them from within R through the command line. The .apsim files correspond to
+	     APSIM "Classic" (7.x) - Windows only - and the .apsimx files correspond to APSIM-X "Next Generation".
+	     For more information about APSIM see (www.apsim.info) and for APSIM
+	     next generation (https://apsimnextgeneration.netlify.com/). 
 Depends: R (>= 3.3.0)
 License: GPL-3
 Encoding: UTF-8
