Making the inspect functions more consistent and adding this to the vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(apsim)
 export(apsim.options)
 export(apsim_example)
 export(apsim_options)
+export(apsim_version)
 export(apsimx)
 export(apsimx.options)
 export(apsimx_example)
