Various improvements to replacement functions and fixing help file for apsimx_soil_profile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(apsimx.options)
 export(apsimx_example)
 export(apsimx_filetype)
 export(apsimx_options)
+export(apsimx_soil_profile)
 export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
 export(edit_apsim)
