Great improvements to the soil profile functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(auto_detect_apsimx_examples)
 export(edit_apsim)
 export(edit_apsimx)
 export(edit_apsimx_batch)
+export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
 export(inspect_apsim)
 export(inspect_apsimx)
