--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(edit_apsimx_batch)
 export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
 export(get_power_apsim_met)
-export(imput_apsim_met)
+export(impute_apsim_met)
 export(inspect_apsim)
 export(inspect_apsimx)
 export(inspect_apsimx_replacement)
