Adding the possibility to insepct and edit SWIM for APSIM 'Classic'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(apsimx_options)
 export(apsimx_soil_profile)
 export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
+export(check_apsim_met)
 export(edit_apsim)
 export(edit_apsimx)
 export(edit_apsimx_batch)
@@ -38,3 +39,4 @@ import(jsonlite)
 import(knitr)
 import(xml2)
 importFrom(utils,read.table)
+importFrom(utils,write.table)
