--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: apsimx
 Title: Inspect, Read, Edit and Run APSIM-X "Next Generation" and APSIM "Classic"
-Version: 1.74
+Version: 1.76
 Authors@R: person("Fernando", "Miguez", email = "femiguezt@iastate.edu", role = c("aut", "cre"))
 Description: The functions in this package inspect, read, edit and run .apsimx (JSON) and .apsim (XML)
              files and run them from within R through the command line. The .apsim files correspond to
@@ -20,6 +20,7 @@ Imports:
 Suggests:
 	ggplot2,
 	nasapower,
-	FedData
+	FedData,
+	sf
 LazyData: true
 RoxygenNote: 6.1.1
