--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: apsimx
 Title: Inspect, Read, Edit and Run APSIM-X "Next Generation" and APSIM "Classic"
-Version: 1.76
-Authors@R: person("Fernando", "Miguez", email = "femiguezt@iastate.edu", role = c("aut", "cre"))
+Version: 1.77
+Authors@R: person("Fernando", "Miguez", email = "femiguez@iastate.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4627-8329"))
 Description: The functions in this package inspect, read, edit and run .apsimx (JSON) and .apsim (XML)
              files and run them from within R through the command line. The .apsim files correspond to
 	     APSIM "Classic" (7.x) - Windows only - and the .apsimx files correspond to APSIM-X "Next Generation".
