--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
 export(check_apsim_met)
 export(edit_apsim)
+export(edit_apsim_replace_soil_profile)
 export(edit_apsimx)
 export(edit_apsimx_batch)
 export(edit_apsimx_replace_soil_profile)
@@ -39,5 +40,6 @@ import(RSQLite)
 import(jsonlite)
 import(knitr)
 import(xml2)
+importFrom(tools,file_path_sans_ext)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
