--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,9 @@ export(read_apsim_all)
 export(read_apsim_met)
 export(read_apsimx)
 export(read_apsimx_all)
+export(soilwat_parms)
 export(ssurgo2sp)
+export(swim_parms)
 export(write_apsim_met)
 import(DBI)
 import(RSQLite)
