New functions to edit Classic xml files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(auto_detect_apsimx_examples)
 export(check_apsim_met)
 export(edit_apsim)
 export(edit_apsim_replace_soil_profile)
+export(edit_apsim_xml)
 export(edit_apsimx)
 export(edit_apsimx_batch)
 export(edit_apsimx_replace_soil_profile)
