Many changes bringing the package up to speed with current APSIMX version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(read_apsimx_all)
 export(soilwat_parms)
 export(ssurgo2sp)
 export(swim_parms)
+export(unit_conv)
 export(write_apsim_met)
 import(DBI)
 import(RSQLite)
