get_daymet produces vp data in the correct units (hPa). inspect_apsimx is more robust when handling factorials

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: apsimx
 Title: Inspect, Read, Edit and Run APSIM-X "Next Generation" and APSIM "Classic"
-Version: 1.928
+Version: 1.930
 Authors@R: person("Fernando", "Miguez", email = "femiguez@iastate.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4627-8329"))
 Description: The functions in this package inspect, read, edit and run .apsimx (JSON) and .apsim (XML)
              files and run them from within R through the command line. The .apsim files correspond to
 	     APSIM "Classic" (7.x) - Windows only - and the .apsimx files correspond to APSIM-X "Next Generation".
 	     For more information about APSIM see (www.apsim.info) and for APSIM
-	     next generation (https://apsimnextgeneration.netlify.com/). 
+	     next generation (<https://apsimnextgeneration.netlify.com/>). 
 Depends: R (>= 3.3.0)
 License: GPL-3
 Encoding: UTF-8
