--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(edit_apsimx_batch)
 export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
 export(get_daymet_apsim_met)
+export(get_iem_apsim_met)
+export(get_iemre_apsim_met)
 export(get_power_apsim_met)
 export(impute_apsim_met)
 export(inspect_apsim)
