Updates addressing checks for soil_profile. Also adding viewer

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,8 +24,10 @@ Suggests:
         datasets,
         FedData,
 	ggplot2,
+	listviewer,
 	nasapower,
 	raster,
+	reactR,
 	rmarkdown,
 	sp,
 	spData,
