--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ export(soilwat_parms)
 export(ssurgo2sp)
 export(swim_parms)
 export(unit_conv)
+export(view_apsim)
+export(view_apsimx)
 export(write_apsim_met)
 import(DBI)
 import(RSQLite)
