--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(apsimx_soil_profile)
 export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
 export(check_apsim_met)
+export(check_apsimx_soil_profile)
 export(edit_apsim)
 export(edit_apsim_replace_soil_profile)
 export(edit_apsim_xml)
