Fixing errors in the documentation and adding preliminary version of parameter estimation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,8 +30,10 @@ export(get_iemre_apsim_met)
 export(get_power_apsim_met)
 export(impute_apsim_met)
 export(inspect_apsim)
+export(inspect_apsim_xml)
 export(inspect_apsimx)
 export(inspect_apsimx_replacement)
+export(optim_apsim)
 export(read_apsim)
 export(read_apsim_all)
 export(read_apsim_met)
@@ -42,6 +44,7 @@ export(ssurgo2sp)
 export(swim_parms)
 export(unit_conv)
 export(view_apsim)
+export(view_apsim_xml)
 export(view_apsimx)
 export(write_apsim_met)
 import(DBI)
