--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(edit_apsimx)
 export(edit_apsimx_batch)
 export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
+export(extract_values_apsimx)
 export(get_daymet_apsim_met)
 export(get_iem_apsim_met)
 export(get_iemre_apsim_met)
@@ -35,6 +36,7 @@ export(inspect_apsim_xml)
 export(inspect_apsimx)
 export(inspect_apsimx_replacement)
 export(optim_apsim)
+export(optim_apsimx)
 export(read_apsim)
 export(read_apsim_all)
 export(read_apsim_met)
