Fixing minor issues after R check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,9 @@ import(RSQLite)
 import(jsonlite)
 import(knitr)
 import(xml2)
+importFrom(stats,optim)
+importFrom(stats,qt)
+importFrom(stats,var)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
