--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(inspect_apsim)
 export(inspect_apsim_xml)
 export(inspect_apsimx)
 export(inspect_apsimx_replacement)
+export(mcmc.apsim.env)
+export(mcmc.apsimx.env)
 export(optim_apsim)
 export(optim_apsimx)
 export(read_apsim)
