--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ import(knitr)
 import(xml2)
 importFrom(stats,optim)
 importFrom(stats,qt)
+importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,read.table)
