--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
 export(extract_values_apsimx)
 export(get_daymet_apsim_met)
+export(get_gsod_apsim_met)
 export(get_iem_apsim_met)
 export(get_iemre_apsim_met)
 export(get_power_apsim_met)
@@ -59,9 +60,14 @@ import(RSQLite)
 import(jsonlite)
 import(knitr)
 import(xml2)
+importFrom(stats,coef)
+importFrom(stats,cor)
+importFrom(stats,deviance)
+importFrom(stats,lm)
 importFrom(stats,optim)
 importFrom(stats,qt)
 importFrom(stats,sd)
+importFrom(stats,sigma)
 importFrom(stats,var)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,read.table)
