I guess tons of updates...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(auto_detect_apsimx_examples)
 export(check_apsim_met)
 export(check_apsimx_soil_profile)
 export(compare_apsim_met)
+export(date2doy)
+export(doy2date)
 export(edit_apsim)
 export(edit_apsim_replace_soil_profile)
 export(edit_apsim_xml)
@@ -40,6 +42,7 @@ export(inspect_apsimx)
 export(inspect_apsimx_replacement)
 export(mcmc.apsim.env)
 export(mcmc.apsimx.env)
+export(napad_apsim_met)
 export(optim_apsim)
 export(optim_apsimx)
 export(read_apsim)
