--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ importFrom(stats,lm)
 importFrom(stats,optim)
 importFrom(stats,qt)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(stats,sigma)
 importFrom(stats,var)
 importFrom(tools,file_path_sans_ext)
