Fixing bug in auto_detect_apsimx (see issue by Chloe). Enhancement for optim_apsim for multiple simulations and changes to met data related functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(apsimx_example)
 export(apsimx_filetype)
 export(apsimx_options)
 export(apsimx_soil_profile)
+export(as_apsim_met)
 export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
 export(check_apsim_met)
