--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,5 +80,6 @@ importFrom(stats,setNames)
 importFrom(stats,sigma)
 importFrom(stats,var)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,packageVersion)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
