Improvements and various bug fixes. New function to fetch replacement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(unit_conv)
 export(view_apsim)
 export(view_apsim_xml)
 export(view_apsimx)
+export(wget_apsimx_json)
 export(write_apsim_met)
 import(DBI)
 import(RSQLite)
