The main last effort was to create a function which retrieves data from SoilGrid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(get_daymet_apsim_met)
 export(get_gsod_apsim_met)
 export(get_iem_apsim_met)
 export(get_iemre_apsim_met)
+export(get_isric_soil_profile)
 export(get_power_apsim_met)
 export(impute_apsim_met)
 export(inspect_apsim)
