--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(get_iem_apsim_met)
 export(get_iemre_apsim_met)
 export(get_isric_soil_profile)
 export(get_power_apsim_met)
+export(get_ssurgo_soil_profile)
 export(impute_apsim_met)
 export(inspect_apsim)
 export(inspect_apsim_xml)
