Fixing man file for wget_apsimx_json

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(edit_apsimx_batch)
 export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
 export(extract_values_apsimx)
+export(get_apsimx_json)
 export(get_daymet_apsim_met)
 export(get_gsod_apsim_met)
 export(get_iem_apsim_met)
@@ -65,7 +66,6 @@ export(unit_conv)
 export(view_apsim)
 export(view_apsim_xml)
 export(view_apsimx)
-export(wget_apsimx_json)
 export(write_apsim_met)
 import(DBI)
 import(RSQLite)
