Slightly ahead of CRAN now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
 export(extract_values_apsimx)
 export(get_apsimx_json)
+export(get_daymet2_apsim_met)
 export(get_daymet_apsim_met)
 export(get_gsod_apsim_met)
 export(get_iem_apsim_met)
@@ -45,6 +46,7 @@ export(get_power_apsim_met)
 export(get_ssurgo_soil_profile)
 export(get_ssurgo_tables)
 export(impute_apsim_met)
+export(insert_replacement_node)
 export(inspect_apsim)
 export(inspect_apsim_xml)
 export(inspect_apsimx)
@@ -62,6 +64,7 @@ export(read_apsimx_all)
 export(soilwat_parms)
 export(ssurgo2sp)
 export(swim_parms)
+export(tt_apsim_met)
 export(unit_conv)
 export(view_apsim)
 export(view_apsim_xml)
