--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,11 +45,13 @@ export(get_isric_soil_profile)
 export(get_power_apsim_met)
 export(get_ssurgo_soil_profile)
 export(get_ssurgo_tables)
+export(grep_json_list)
 export(impute_apsim_met)
 export(insert_replacement_node)
 export(inspect_apsim)
 export(inspect_apsim_xml)
 export(inspect_apsimx)
+export(inspect_apsimx_json)
 export(inspect_apsimx_replacement)
 export(mcmc.apsim.env)
 export(mcmc.apsimx.env)
