upto date with new submission to CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(view_apsim)
 export(view_apsim_xml)
 export(view_apsimx)
 export(write_apsim_met)
+export(xargs_apsimx)
 import(DBI)
 import(RSQLite)
 import(jsonlite)
