--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(read_apsim_all)
 export(read_apsim_met)
 export(read_apsimx)
 export(read_apsimx_all)
+export(sens_apsimx)
 export(soilwat_parms)
 export(ssurgo2sp)
 export(swim_parms)
@@ -78,6 +79,7 @@ import(RSQLite)
 import(jsonlite)
 import(knitr)
 import(xml2)
+importFrom(stats,anova)
 importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,cov2cor)
