--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,out_mrg)
 S3method(plot,soil_profile)
 S3method(print,met)
 S3method(print,optim_apsim)
+S3method(summary,sens_apsim)
 S3method(vcov,optim_apsim)
 export(apsim)
 export(apsim.options)
