Testing sens_apsimx, fixing bugs, updating nasapower and removing unneeded files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(read_apsim_all)
 export(read_apsim_met)
 export(read_apsimx)
 export(read_apsimx_all)
+export(sens_apsim)
 export(sens_apsimx)
 export(soilwat_parms)
 export(ssurgo2sp)
