Fixing documentation. Main new feature to test is the root argument in edit_soil function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
 export(extract_values_apsimx)
 export(get_apsimx_json)
+export(get_chirps_apsim_met)
 export(get_daymet2_apsim_met)
 export(get_daymet_apsim_met)
 export(get_gsod_apsim_met)
