Working on many improvements around the soil_profile object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(read_apsimx)
 export(read_apsimx_all)
 export(sens_apsim)
 export(sens_apsimx)
+export(soilorganicmatter_parms)
 export(soilwat_parms)
 export(ssurgo2sp)
 export(swim_parms)
