Adding the compare function for soil_profile objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,met)
 S3method(plot,met_mrg)
 S3method(plot,out_mrg)
 S3method(plot,soil_profile)
+S3method(plot,soil_profile_mrg)
 S3method(print,met)
 S3method(print,optim_apsim)
 S3method(summary,met)
@@ -28,6 +29,7 @@ export(check_apsim_met)
 export(check_apsimx_soil_profile)
 export(compare_apsim)
 export(compare_apsim_met)
+export(compare_apsim_soil_profile)
 export(date2doy)
 export(doy2date)
 export(edit_apsim)
