Spent a ton of time adding the calculation of the frost free period in summary.met

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(plot,soil_profile)
 S3method(plot,soil_profile_mrg)
 S3method(print,met)
 S3method(print,optim_apsim)
+S3method(print,soil_profile_mrg)
 S3method(summary,met)
 S3method(summary,sens_apsim)
 S3method(vcov,optim_apsim)
