Too many changes... the last one was about returning an index table for compare functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ S3method(plot,out_mrg)
 S3method(plot,soil_profile)
 S3method(plot,soil_profile_mrg)
 S3method(print,met)
+S3method(print,met_mrg)
 S3method(print,optim_apsim)
+S3method(print,out_mrg)
 S3method(print,soil_profile_mrg)
 S3method(summary,met)
 S3method(summary,sens_apsim)
@@ -88,6 +90,7 @@ import(RSQLite)
 import(jsonlite)
 import(knitr)
 import(xml2)
+importFrom(stats,aggregate)
 importFrom(stats,anova)
 importFrom(stats,coef)
 importFrom(stats,cor)
