Starting to get ready for CRAN release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(apsimx_soil_profile)
 export(as_apsim_met)
 export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
+export(carbon_stocks)
 export(check_apsim_met)
 export(check_apsimx_soil_profile)
 export(compare_apsim)
