Adding remove method for apsim_met

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ export(read_apsim_all)
 export(read_apsim_met)
 export(read_apsimx)
 export(read_apsimx_all)
+export(remove_column_apsim_met)
 export(sens_apsim)
 export(sens_apsimx)
 export(soilorganicmatter_parms)
