Working on improving read_apsim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(apsimx_soil_profile)
 export(as_apsim_met)
 export(auto_detect_apsim_examples)
 export(auto_detect_apsimx_examples)
+export(available_water_content)
 export(carbon_stocks)
 export(check_apsim_met)
 export(check_apsimx_soil_profile)
@@ -74,6 +75,7 @@ export(optim_apsimx)
 export(read_apsim)
 export(read_apsim_all)
 export(read_apsim_met)
+export(read_apsim_soils)
 export(read_apsimx)
 export(read_apsimx_all)
 export(remove_column_apsim_met)
