Recalculating amp in objects of class met

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(summary,met)
 S3method(summary,sens_apsim)
 S3method(vcov,optim_apsim)
 export(add_column_apsim_met)
+export(amp_apsim_met)
 export(apsim)
 export(apsim.options)
 export(apsim_example)
