--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,7 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,sigma)
 importFrom(stats,var)
+importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,packageVersion)
 importFrom(utils,read.table)
