--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,8 +60,10 @@ export(get_isric_soil_profile)
 export(get_power_apsim_met)
 export(get_ssurgo_soil_profile)
 export(get_ssurgo_tables)
+export(get_worldmodeler_soil_profile)
 export(grep_json_list)
 export(impute_apsim_met)
+export(initialwater_parms)
 export(insert_replacement_node)
 export(inspect_apsim)
 export(inspect_apsim_xml)
