Adding documentation for tav_apsim_met and changes to inspect and edit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(soilorganicmatter_parms)
 export(soilwat_parms)
 export(ssurgo2sp)
 export(swim_parms)
+export(tav_apsim_met)
 export(tt_apsim_met)
 export(unit_conv)
 export(view_apsim)
