--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(edit_apsimx)
 export(edit_apsimx_batch)
 export(edit_apsimx_replace_soil_profile)
 export(edit_apsimx_replacement)
+export(extract_data_apsimx)
 export(extract_values_apsimx)
 export(get_apsimx_json)
 export(get_chirps_apsim_met)
