Well how about a million changes...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(get_isric_soil_profile)
 export(get_power_apsim_met)
 export(get_ssurgo_soil_profile)
 export(get_ssurgo_tables)
+export(get_worldmodeler_apsim_met)
 export(get_worldmodeler_soil_profile)
 export(grep_json_list)
 export(impute_apsim_met)
@@ -111,6 +112,7 @@ importFrom(stats,deviance)
 importFrom(stats,lm)
 importFrom(stats,optim)
 importFrom(stats,qt)
+importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,sigma)
