Too many changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(print,met)
 S3method(print,met_mrg)
 S3method(print,optim_apsim)
 S3method(print,out_mrg)
+S3method(print,sens_apsim)
 S3method(print,soil_profile_mrg)
 S3method(summary,met)
 S3method(summary,sens_apsim)
