--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(sens_apsim)
 export(sens_apsimx)
 export(soilorganicmatter_parms)
 export(soilwat_parms)
+export(solutes_parms)
 export(ssurgo2sp)
 export(swim_parms)
 export(tav_apsim_met)
