--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(auto_detect_apsimx_examples)
 export(available_water_content)
 export(carbon_stocks)
 export(check_apsim_met)
+export(check_apsimx)
 export(check_apsimx_soil_profile)
 export(compare_apsim)
 export(compare_apsim_met)
@@ -115,9 +116,11 @@ importFrom(stats,lm)
 importFrom(stats,optim)
 importFrom(stats,qt)
 importFrom(stats,quantile)
+importFrom(stats,reformulate)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,sigma)
+importFrom(stats,terms)
 importFrom(stats,var)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
