--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ importFrom(stats,cov2cor)
 importFrom(stats,deviance)
 importFrom(stats,lm)
 importFrom(stats,optim)
+importFrom(stats,pnorm)
 importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,reformulate)
