Fixing bug in the use of the future package. Using 'get' for variables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ importFrom(stats,terms)
 importFrom(stats,var)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,head)
 importFrom(utils,packageVersion)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
