exporting the slga functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(get_iemre_apsim_met)
 export(get_isric_soil_profile)
 export(get_power_apsim_met)
 export(get_slga_soil)
+export(get_slga_soil_profile)
 export(get_ssurgo_soil_profile)
 export(get_ssurgo_tables)
 export(get_worldmodeler_apsim_met)
